# stablecoin_brainstorm

./: .gitignore  DEPLOY.md  render.yaml
.claude/: launch.json
deliverables/: Fiserv_Crypto_Strategy_Full_Analysis.docx  Fiserv_Crypto_Strategy_Investor_Day.pptx  Fiserv_Crypto_Strategy_Investor_Day_v2.pptx  Fiserv_Crypto_Strategy_Investor_Day_v3.pptx  Fiserv_Crypto_Strategy_Investor_Day_v4.pptx  Fiserv_Panel_Evaluations.docx  create_deck.py  create_docx.py  create_panels_docx.py  ~$Fiserv_Crypto_Strategy_Investor_Day.pptx  ~$serv_Panel_Evaluations.docx
deliverables/clover-cnp/: 00-index.md  01-problem-space.md  01b-existing-prototypes-baseline.md  02-jtbd-matrix.md  03-strategy-briefs.md  03b-existing-prototype-panel.md  04-panel-synthesis.md  05-validation-report.md  05b-existing-prototypes-decision.md  06-portfolio-after.md  07-phase5-delivery.md  08-phase6-delivery.md  phase4-research-findings.md
demo-app/: package-lock.json  package.json
demo-app/src/: App.jsx  config.js
prototype-1-yield-sweep/backend/: .env.example  requirements.txt  run.py
prototype-2-agent-pay/: .env.example  package.json
prototype-2-agent-pay/agent-sdk/python/: pyproject.toml
prototype-2-agent-pay/agent-sdk/python/fiserv_agent_pay/: __init__.py  client.py
prototype-2-agent-pay/dashboard/: index.html  package.json
prototype-2-agent-pay/demo-agent/: package.json
prototype-2-agent-pay/gateway/: package-lock.json  package.json
prototype-2-agent-pay/scripts/: start-services.js
prototype-2-agent-pay/settler/: package.json
prototype-2-agent-pay/verifier/: package.json
prototype-3-supplier-pay/backend/: requirements.txt  run.py
prototype-4-cross-border/backend/: .env.example  requirements.txt  run.py
prototype-5-clover-direct/: README.md
shared/: __init__.py  demo_mode  finxact_client  indx_simulator  pyproject.toml
shared/demo-mode/: __init__.py  demo_mode.py
shared/finxact-client/: __init__.py  client.py  exceptions.py  models.py
shared/indx-simulator/: __init__.py  models.py  simulator.py
(+121 files in other folders)
