[project]
name = "fiserv-shared"
version = "0.1.0"
description = "Shared infrastructure for Fiserv crypto prototype monorepo"
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "finxact_client*",
    "indx_simulator*",
    "demo_mode*",
]
# Symlinks (finxact_client -> finxact-client, etc.) bridge the
# monorepo hyphen convention to valid Python package names.
# Created by: ln -sf finxact-client finxact_client  (etc.)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
