[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fiserv-agent-pay"
version = "0.1.0"
description = "Python SDK for AI agents to make x402 payments via Fiserv"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Fiserv", email = "agentpay@fiserv.com" },
]

dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
solana = ["solders>=0.20.0", "PyNaCl>=1.5.0"]
ethereum = ["eth-account>=0.11.0", "eth-abi>=5.0.0"]
all = [
    "solders>=0.20.0",
    "PyNaCl>=1.5.0",
    "eth-account>=0.11.0",
    "eth-abi>=5.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fiserv_agent_pay"]
